// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Search renders disabled 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-imZoBe cVhXWo"
      disabled={true}
    >
      <label
        className="sc-fqEDVf rOOsh"
      >
        medium
      </label>
      <input
        className="sc-oTTbF ieBiDU"
        disabled={true}
        placeholder=" "
        type="search"
        value="Text"
      />
      <p
        className="sc-dloDHE cUFjLb"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imZoBe cVhXWo"
      disabled={true}
    >
      <label
        className="sc-fqEDVf rOOsh"
      >
        large
      </label>
      <input
        className="sc-oTTbF izyiDj"
        disabled={true}
        placeholder=" "
        type="search"
        value="Text"
      />
      <p
        className="sc-dloDHE cUFjLb"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imZoBe cVhXWo"
      disabled={true}
    >
      <div
        className="sc-iKKmqK kuIlyc"
      >
        <input
          className="sc-oTTbF kIfQWV"
          disabled={true}
          placeholder=" "
          type="search"
          value="Text"
        />
        <label
          className="sc-fOpBKL hWiPKu"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-dloDHE cUFjLb"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Search renders error 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <label
        className="sc-fqEDVf rOOsh"
      >
        medium
      </label>
      <input
        className="sc-oTTbF ZTjWy"
        placeholder="e.g. EPL"
        type="search"
      />
      <p
        className="sc-dloDHE eyGbhX"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <label
        className="sc-fqEDVf rOOsh"
      >
        large
      </label>
      <input
        className="sc-oTTbF fuitrZ"
        placeholder="e.g. EPL"
        type="search"
      />
      <p
        className="sc-dloDHE eyGbhX"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <div
        className="sc-iKKmqK kuIlyc"
      >
        <input
          className="sc-oTTbF hSExwn"
          placeholder="e.g. EPL"
          type="search"
        />
        <label
          className="sc-fOpBKL hWiPKu"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-dloDHE eyGbhX"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Search renders readOnly 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <label
        className="sc-fqEDVf rOOsh"
      >
        medium
      </label>
      <input
        className="sc-oTTbF ieBiDU"
        placeholder=" "
        readOnly={true}
        type="search"
        value="Read only text"
      />
      <p
        className="sc-dloDHE cUFjLb"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <label
        className="sc-fqEDVf rOOsh"
      >
        large
      </label>
      <input
        className="sc-oTTbF izyiDj"
        placeholder=" "
        readOnly={true}
        type="search"
        value="Read only text"
      />
      <p
        className="sc-dloDHE cUFjLb"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <div
        className="sc-iKKmqK kuIlyc"
      >
        <input
          className="sc-oTTbF kIfQWV"
          placeholder=" "
          readOnly={true}
          type="search"
          value="Read only text"
        />
        <label
          className="sc-fOpBKL hWiPKu"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-dloDHE cUFjLb"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Search renders with hint 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <label
        className="sc-fqEDVf rOOsh"
      >
        medium
      </label>
      <input
        className="sc-oTTbF ieBiDU"
        placeholder="e.g. EPL"
        type="search"
      />
      <p
        className="sc-dloDHE cUFjLb"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <label
        className="sc-fqEDVf rOOsh"
      >
        large
      </label>
      <input
        className="sc-oTTbF izyiDj"
        placeholder="e.g. EPL"
        type="search"
      />
      <p
        className="sc-dloDHE cUFjLb"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <div
        className="sc-iKKmqK kuIlyc"
      >
        <input
          className="sc-oTTbF kIfQWV"
          placeholder="e.g. EPL"
          type="search"
        />
        <label
          className="sc-fOpBKL hWiPKu"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-dloDHE cUFjLb"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Search renders with label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <label
        className="sc-fqEDVf rOOsh"
      >
        medium
      </label>
      <input
        className="sc-oTTbF ieBiDU"
        placeholder="e.g. EPL"
        type="search"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <label
        className="sc-fqEDVf rOOsh"
      >
        large
      </label>
      <input
        className="sc-oTTbF izyiDj"
        placeholder="e.g. EPL"
        type="search"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <div
        className="sc-iKKmqK kuIlyc"
      >
        <input
          className="sc-oTTbF kIfQWV"
          placeholder="e.g. EPL"
          type="search"
        />
        <label
          className="sc-fOpBKL hWiPKu"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Search renders with label RTL 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <label
        className="sc-fqEDVf rOOsh"
        dir="rtl"
      >
        medium
      </label>
      <input
        className="sc-oTTbF ieBiDU"
        dir="rtl"
        placeholder="e.g. EPL"
        type="search"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <label
        className="sc-fqEDVf rOOsh"
        dir="rtl"
      >
        large
      </label>
      <input
        className="sc-oTTbF izyiDj"
        dir="rtl"
        placeholder="e.g. EPL"
        type="search"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <div
        className="sc-iKKmqK kuIlyc"
      >
        <input
          className="sc-oTTbF kIfQWV"
          dir="rtl"
          placeholder="e.g. EPL"
          type="search"
        />
        <label
          className="sc-fOpBKL dUFjbR"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Search renders without label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <input
        className="sc-oTTbF ieBiDU"
        placeholder="medium"
        type="search"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <input
        className="sc-oTTbF izyiDj"
        placeholder="large"
        type="search"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <div
        className="sc-iKKmqK kuIlyc"
      >
        <input
          className="sc-oTTbF iDUbgU"
          placeholder="xlarge"
          type="search"
        />
        <label
          className="sc-fOpBKL hWiPKu"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Search supports background colour 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <label
        className="sc-fqEDVf rOOsh"
      >
        medium
      </label>
      <input
        className="sc-oTTbF lmKnNf"
        placeholder="e.g. EPL"
        type="search"
      />
      <p
        className="sc-dloDHE cUFjLb"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <label
        className="sc-fqEDVf rOOsh"
      >
        large
      </label>
      <input
        className="sc-oTTbF bUpZmE"
        placeholder="e.g. EPL"
        type="search"
      />
      <p
        className="sc-dloDHE cUFjLb"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <div
        className="sc-iKKmqK fQvxgz"
      >
        <input
          className="sc-oTTbF kIfQWV"
          placeholder="e.g. EPL"
          type="search"
        />
        <label
          className="sc-fOpBKL hWiPKu"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-dloDHE cUFjLb"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;
